feat: Loader page animation complete.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <div class="container">
                 <span class="counter">100 - 100</span>
                 <div id="loader-top">
-                    <h1 data-word="your">Your</h1>
-                    <h1>Web experience</h1>
-                    <h1>Is loading right <span data-word="now">Now</span> </h1>
+                    <div class="loader-text"><h1 data-word="your">Your</h1></div>
+                    <div class="loader-text"><h1>Web experience</h1></div>
+                    <div class="loader-text"><h1>Is loading right <span data-word="now">Now</span> </h1></div>
                 </div>
                 <div id="loader-bottom">
                     <p>Please wait<br>a few seconds.</p>
