--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 </div>
             </div>
         </div>
-    </main>
+        
+        <div class="page1"></div>
 
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
