feat: Complete layout and responsiveness for Page 5

--- a/index.html
+++ b/index.html
@@ -120,30 +120,108 @@
                     </p>
                 </div>
             </div>
-        
-                <div class="page4-about-section">
-                    <div class="rewards-row">
-                        <p>Awwwards x 16</p>
-                        <p>SOTM, SOTD and Honrable Mentions</p>
-                    </div>
-                    <div class="rewards-row">
-                        <p>Red Dot Award x1</p>
-                        <p>Best of the Best</p>
-                    </div>
-                    <div class="rewards-row">
-                        <p>FWA x11</p>
-                        <p>FWA of The Day</p>
-                    </div>
-                    <div class="rewards-row">
-                        <p>CSSDA x23</p>
-                        <p>WOTM, WOTD and UI, UX, Innovation</p>
-                    </div>
-                    <div class="rewards-row">
-                        <p>Behance x25</p>
-                        <p>Interaction, Graphic Design</p>
-                    </div>
+            <div class="page4-about-section">
+                <div class="rewards-row">
+                    <p>Awwwards x 16</p>
+                    <p>SOTM, SOTD and Honrable Mentions</p>
                 </div>
-        
+                <div class="rewards-row">
+                    <p>Red Dot Award x1</p>
+                    <p>Best of the Best</p>
+                </div>
+                <div class="rewards-row">
+                    <p>FWA x11</p>
+                    <p>FWA of The Day</p>
+                </div>
+                <div class="rewards-row">
+                    <p>CSSDA x23</p>
+                    <p>WOTM, WOTD and UI, UX, Innovation</p>
+                </div>
+                <div class="rewards-row">
+                    <p>Behance x25</p>
+                    <p>Interaction, Graphic Design</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="page5-top-border">
+            <span class="page5-border"></span>
+            <p>We work with</p>
+        </div>
+
+
+        <div class="page5">
+            <div class="scrollbar-container">
+                <div class="page5-scrollbar">
+                    <p class="first-scrollbar">Fashion</p>
+                    <p>Sport</p>
+                    <p>Technology</p>
+                </div>
+                <div class="page5-scrollbar">
+                    <p>Fashion</p>
+                    <p>Sport</p>
+                    <p>Technology</p>
+                </div>
+                <div class="page5-scrollbar">
+                    <p>Fashion</p>
+                    <p>Sport</p>
+                    <p>Technology</p>
+                </div>
+            </div>
+
+            <div class="scrollbar-container">
+                <div class="page5-scrollbar">
+                    <p class="first-scrollbar">architecture</p>
+                    <p>beauty</p>
+                    <p>Real estate</p>
+                </div>
+                <div class="page5-scrollbar">
+                    <p>architecture</p>
+                    <p>beauty</p>
+                    <p>Real estate</p>
+                </div>
+                <div class="page5-scrollbar">
+                    <p>architecture</p>
+                    <p>beauty</p>
+                    <p>Real estate</p>
+                </div>
+            </div>
+
+            <div class="scrollbar-container">
+                <div class="page5-scrollbar">
+                    <p class="first-scrollbar">science</p>
+                    <p>partners</p>
+                    <p>travel</p>
+                </div>
+                <div class="page5-scrollbar">
+                    <p>science</p>
+                    <p>partners</p>
+                    <p>travel</p>
+                </div>
+                <div class="page5-scrollbar">
+                    <p>science</p>
+                    <p>partners</p>
+                    <p>travel</p>
+                </div>
+            </div>
+
+            <div class="scrollbar-container">
+                <div class="page5-scrollbar">
+                    <p class="first-scrollbar">Automotive</p>
+                    <p>Music</p>
+                    <p>hotels</p>
+                </div>
+                <div class="page5-scrollbar">
+                    <p>Automotive</p>
+                    <p>Music</p>
+                    <p>hotels</p>
+                </div>
+                <div class="page5-scrollbar">
+                    <p>Automotive</p>
+                    <p>Music</p>
+                    <p>hotels</p>
+                </div>
+            </div>
         </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
